# swd

./: .gitignore  CMakeLists.txt  dependencies.cmake
.github/workflows/: hw1.yml  hw2.yml  hw3.yml  hw4.yml  hw5.yml  hw7.yml
cmake/: dependencies.cmake
hw1/: CMakeLists.txt  details.cpp  details.hpp  hw1.cmake  quadratic.cpp  quadratic.hpp
hw1/test/: CMakeLists.txt  test.cpp
hw2/: CMakeLists.txt  hw2.cmake
hw2/commands/: CMakeLists.txt  move.cpp  move.hpp  rotate.cpp  rotate.hpp
hw2/objects/: CMakeLists.txt  factory.cpp  factory.hpp  movable.cpp  movable.hpp  object.cpp  object.hpp  rotatable.cpp  rotatable.hpp
hw2/properties/: CMakeLists.txt  direction.hpp  directions_number.cpp  directions_number.hpp  position.cpp  position.hpp  position_angle.hpp  property.hpp  static_posiotion.hpp  velocity.cpp  velocity.hpp  velocity_angle.cpp  velocity_angle.hpp
hw2/test/: CMakeLists.txt  test.cpp
hw2/utils/: CMakeLists.txt  convert.hpp
hw3/: CMakeLists.txt  hw3.cmake
hw3/app/: CMakeLists.txt  app.cpp  app.hpp  iface.hpp  manager.cpp  manager.hpp
hw3/commands/: CMakeLists.txt  command.cpp  command.hpp  retry.cpp  retry.hpp  retry_second.cpp  retry_second.hpp  throw_cmd.cpp  throw_cmd.hpp  write_log.cpp  write_log.hpp
hw3/exceptions/: CMakeLists.txt  handler.cpp  handler.hpp  iface.hpp
hw3/logger/: CMakeLists.txt  iface.hpp  logger.cpp  logger.hpp
hw3/queue/: CMakeLists.txt  iface.hpp  queue.cpp  queue.hpp
hw3/test/: CMakeLists.txt  test.cpp
hw4/: CMakeLists.txt  hw4.cmake
hw4/commands/: CMakeLists.txt  burn_fuel.cpp  burn_fuel.hpp  check_fuel.cpp  check_fuel.hpp  command.hpp
hw4/macro_commands/: CMakeLists.txt  factory.cpp  factory.hpp  macro_command.cpp  macro_command.hpp
hw4/objects/: CMakeLists.txt  factory.cpp  factory.hpp  object.hpp  with_fuel.cpp  with_fuel.hpp
hw4/properties/: CMakeLists.txt  direction.cpp  direction.hpp  directions_number.hpp  fuel.cpp  fuel.hpp  fuel_consumption.cpp  fuel_consumption.hpp  position.hpp  position_angle.cpp  position_angle.hpp  property.hpp  static_posiotion.cpp  static_posiotion.hpp  velocity.hpp  velocity_angle.hpp
hw4/test/: CMakeLists.txt  test.cpp
hw4/utils/: CMakeLists.txt  type_index.hpp
hw5/: CMakeLists.txt  hw5.cmake
hw5/ioc/: CMakeLists.txt  command.hpp  ioc.cpp  ioc.hpp
hw5/test/: CMakeLists.txt  test.cpp
hw7/: CMakeLists.txt  hw7.cmake
hw7/command/: CMakeLists.txt  command.hpp  commands.cpp
hw7/invoker/: CMakeLists.txt  invoker.cpp  invoker.hpp
hw7/test/: CMakeLists.txt  test.cpp
